# components/wso2is.key.manager.operations.endpoint/src/gen/java/org/wso2/is/key/manager/operations/endpoint/DcrApiService.java
@@ -24,7 +24,7 @@ import javax.ws.rs.core.SecurityContext;
 public interface DcrApiService {
       public Response changeApplicationOwner(String applicationOwner, String clientId, MessageContext messageContext) ;
       public Response deleteApplication(String clientId, MessageContext messageContext) ;
-      public Response getApplication(String clientId, Boolean decodeKey, MessageContext messageContext) ;
+      public Response getApplication(String clientId, Boolean encoded, MessageContext messageContext) ;
       public Response regenerateConsumerSecret(String clientId, MessageContext messageContext) ;
       public Response registerApplication(RegistrationRequestDTO registrationRequest, MessageContext messageContext) ;
       public Response updateApplication(UpdateRequestDTO updateRequest, String clientId, MessageContext messageContext) ;
